--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -36,7 +36,7 @@ cmds = [
 
   "echo '=== COPYING FRONTEND BUILD TO BACKEND ==='",
   "mkdir -p server/dist/public",
-  "cp -r client/dist/* server/dist/public/ || echo '⚠️ Frontend build not found'",
+  "cp -r client/src/* server/dist/public/ || echo '⚠️ Frontend build not found'",
 
   "echo '=== VALIDATING FRONTEND ==='",
   "test -f server/dist/public/index.html && echo '✅ Frontend ready in server/dist/public' || echo '❌ Frontend missing'"
