--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,49 +1,19 @@
-# CarRentalManager - Coolify / Nixpacks deployment configuration
-# Frontend build output: client/dist
-# Backend: server
-# Node 18, production mode
-
+# Coolify deployment configuration using Nixpacks
 [variables]
-NIXPACKS_NODE_VERSION = "18"
-NODE_ENV = "production"
-PORT = "3000"
+NIXPACKS_NODE_VERSION = "20"
 
-# ------------------------
-# Install phase
-# ------------------------
 [phases.install]
-cmds = [
-  "echo '=== INSTALLING ROOT DEPENDENCIES ==='",
-  "NODE_ENV='' npm ci --omit=dev",
+cmds = ["npm ci"]
 
-  "echo '=== INSTALLING CLIENT DEPENDENCIES ==='",
-  "cd client && NODE_ENV='' npm ci --omit=dev && cd ..",
+[phases.setup]
+nixPkgs = ["nodejs-18_x"]
 
-  "echo '=== INSTALLING SERVER DEPENDENCIES ==='",
-  "cd server && NODE_ENV='' npm ci --omit=dev && cd .."
-]
+[phases.install]
+cmds = ["npm install"]
 
-# ------------------------
-# Build phase
-# ------------------------
+
 [phases.build]
-cmds = [
-  "echo '=== BUILDING FRONTEND ==='",
-  "cd client && npm run build && cd ..",
+cmds = ["npm run build"]
 
-  "echo '=== BUILDING BACKEND ==='",
-  "cd server && npm run build && cd ..",
-
-  "echo '=== COPYING FRONTEND BUILD TO BACKEND ==='",
-  "mkdir -p server/dist/public",
-  "cp -r client/src/* server/dist/public/ || echo '⚠️ Frontend build not found'",
-
-  "echo '=== VALIDATING FRONTEND ==='",
-  "test -f server/dist/public/index.html && echo '✅ Frontend ready in server/dist/public' || echo '❌ Frontend missing'"
-]
-
-# ------------------------
-# Start phase
-# ------------------------
 [start]
-cmd = "cd server && NODE_ENV=production node dist/server/index.js"
+cmd = "npm start"
